# thompson-sampling

./: .gitignore  .travis.yml  README.md
d2ng-pomcp/: AUTHORS  Makefile  NEWS  README.md  clear.sh  d2ng-pomcp  d2ng-pomcp.pro  memtest.sh  rooms.map  run.sh
d2ng-pomcp/src/: Makefile  Makefile.am  Makefile.in  battleship.cpp  battleship.h  beliefstate.cpp  beliefstate.h  clear.sh  coord.cpp  coord.h  distribution.cpp  distribution.h  experiment.cpp  experiment.h  grid.h  history.h  killall.sh  main.cpp  mcts.cpp  mcts.h  memorypool.h  memtest.sh  network.cpp  network.h  node.cpp  node.h  pocman.cpp  pocman.h  rocksample.cpp  rocksample.h  rooms.cpp  rooms.h  run.sh  simulator.cpp  simulator.h  statistic.h  tag.cpp  tag.h  testsimulator.cpp  testsimulator.h  (+2 more)
d2ng-pomcp/src/.deps/: pomcp-beliefstate.Po  pomcp-coord.Po  pomcp-experiment.Po  pomcp-main.Po  pomcp-mcts.Po  pomcp-network.Po  pomcp-node.Po  pomcp-pocman.Po  pomcp-rocksample.Po  pomcp-simulator.Po  pomcp-tag.Po  pomcp-testsimulator.Po  pomcp-utils.Po
dng-mcts/: README.md  build  clean  makefile
dng-mcts/ctp3/: README  ctp3.h  main.cc  makefile  random.cc
dng-mcts/engine/: algorithm.h  aot.h  aot_gh.h  aot_path.h  dispatcher.h  dng.h  dot_graph.h  hash.h  heuristic.h  online_rtdp.h  parameters.h  policy.h  problem.h  random.h  rollout.h  statistic.h  uct.h
dng-mcts/puzzle/: main.cc  makefile  puzzle.h
dng-mcts/race/: main.cc  makefile  parsing.h  race.h
dng-mcts/random-mdps/: main.cc  makefile  random-mdps.h
dng-mcts/rect/: main.cc  makefile  rect.h
dng-mcts/sailing/: main.cc  makefile  sailing.h
(+14 files in other folders)
